Design responsive about page

--- a/about.html
+++ b/about.html
@@ -22,7 +22,91 @@
       </nav>
     </header>
 
-    <section>About Content here</section>
+    <!--Hero About Section-->
+    <section class="hero-about-section">
+        <div class="hero-content">
+          <h3>About Us</h3>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard.
+          </p>
+        </div>
+      </section>
+
+      <!--Main About Content Section-->
+
+    <section class="main-about"> 
+     <div class="about-text">
+      <h2>Who We Are</h2>
+      <p>
+        Our mission is simple to create powerful software
+         that solves real-world problems, simplifies complex 
+         processes, and adds value to our clients' businesses. 
+         From startups to enterprises, we provide end-to-end services,
+        including custom software development, mobile and web applications, 
+        cloud solutions, and enterprise software integrations.
+      </p>
+      <a href="">Learn More</a>
+     </div>
+     <div class="about-img">
+        <img src="Images/main_about.jpeg" alt="main-about" />
+     </div>
+     </div>
+    </section>
+     
+     <!--About Why Choose us Section-->
+
+    <section class="choose-us-section">
+        <div class="why-choose-us">
+            <h2>Why Choose Us</h2>
+            <P> 
+                We combine industry-leading expertise 
+                with innovative technology to deliver 
+                top-notch solutions tailored to your 
+                business needs. 
+            </P>
+        </div>
+       
+         <!--Make Cards using Grids-->
+
+        <div class="card-container">
+           <div class="card">
+            <img />
+            <h3>Expertise</h3>
+            <p>
+            We have extensive experience of designing 
+            and developing websites for clients accross various industries.</p>
+           </div>
+
+           <div class="card">
+            <img />
+            <h3>Attention To Detail</h3>
+            <p>
+            We take pride in my work, and I pay close
+            attention to every detail ensure that the end product
+            is of the highest quality.
+           </p>
+           </div>
+
+           <div class="card">
+            <img />
+            <h3>Communication</h3>
+            <p>
+            We believe that clear and constant communication
+            is crucial for the success of any project
+            </p>
+           </div>
+
+           <div class="card">
+            <img />
+            <h3>Customer Services</h3>
+            <p>
+                As a Web developer team, We understand the importance of building
+                long-term relationships with my clients.
+            </p>
+           </div>
+        </div>
+    </section>
 
     <!--Footer Section-->
     <section class="footer-section">
