--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-    
     <!--header Section-->
     <header class="header">
       <div class="logo">
@@ -48,7 +47,7 @@
           publishing software like Aldus PageMaker including versions of Lorem
           Ipsum.
         </p>
-        <img src="Images/about.jpeg" alt="about" />
+        <img src="Images/abouts.jpg" alt="about" />
       </div>
     </section>
 
@@ -123,13 +122,6 @@
             placeholder="Full Name"
             required
           /><br />
-          <!-- <label for="lname">Last Name</label>
-          <input
-            type="text"
-            id="lname"
-            placeholder="Last Name"
-            required
-          /><br /> -->
           <label for="email">Email</label>
           <input type="email" id="email" placeholder="Email" required /><br />
           <label for="message">Message</label>
@@ -140,7 +132,7 @@
             required
           ></textarea
           ><br />
-          <button type="submit">Send email</button>
+          <button type="submit">Submit</button>
         </form>
       </div>
     </section>
