--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <title>About Page</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
   </head>
   <body>
     <!--header Section-->
@@ -12,7 +16,11 @@
           <img src="Images/logo.png" alt="logo" />
         </a>
       </div>
-      <nav>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+      <label for="menu-toggle" class="menu-icon">
+        <i class="fas fa-bars"></i>
+      </label>
+      <nav class="nav-links">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
