--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <!--header Section-->
@@ -12,7 +16,11 @@
           <img src="Images/logo.png" alt="logo" />
         </a>
       </div>
-      <nav>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+          <i class="fas fa-bars"></i>
+        </label>
+      <nav class="nav-links">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
@@ -77,7 +85,7 @@
             more visibility to your business. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown
             printer took a galley of type and scrambled it to make a type the
-            1960s with the release of Letraset sheets containing.
+            1960s.
           </p>
           <a href="https://searchengineland.com/guide/what-is-seo">
             Learn more
