Add Header and Footer in Service Page

--- a/services.html
+++ b/services.html
@@ -30,6 +30,17 @@
       </nav>
     </header>
 
+      <!--Hero About Section-->
+      <section class="hero-service-section">
+        <div class="hero-service-content">
+          <h3>Services</h3>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard.
+          </p>
+        </div>
+      </section>
+
     <!--Our Services Section-->
     <section class="our-service-section">
       <div class="services-text">
@@ -99,6 +110,43 @@
             industry.
           </p>
           <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
+
+     <!--Footer Section-->
+    <section class="footer-section">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <a><img src="Images/logo.png" alt="logo" /></a>
+          <p>Lorem Ipsum, Dolor Sit Amet Consectetur All Rights Reserved</p>
+        </div>
+
+        <div class="footer-links">
+          <h4>Company</h4>
+          <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Pricing</h4>
+          <ul>
+            <li><a href="/about">Overview</a></li>
+            <li><a href="/services">Premium Plan</a></li>
+            <li><a href="/contact">Affliate Program</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Social Links</h4>
+          <ul>
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://www.instagram.com/">Instagram</a></li>
+            <li><a href="https://pk.linkedin.com/>Linkedin">Linkedin</a></li>
+          </ul>
         </div>
       </div>
     </section>
