--- a/JavascriptForm/index.html
+++ b/JavascriptForm/index.html
@@ -3,21 +3,44 @@
   <head>
     <title>Make interactive JS Form</title>
     <link rel="stylesheet" href="CSS/style.css" />
-    <script src="JavaScript/script.js"></script>
   </head>
   <body>
     <div class="form-container" id="form">
-        <form>
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" placeholder="Enter First Name" required/><br />
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" placeholder="Enter Last Name" required/><br />
-          <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Enter Email" required/><br />
-          <label for="password">Password</label>
-          <input type="text" id="password" placeholder="Enter Password" required/><br />
-          <button type="button" onclick="changeFormColor()">Submit </button>
-        </form>
+      <form>
+        <label for="fname">First Name</label>
+        <input
+          type="text"
+          id="fname"
+          placeholder="Enter First Name"
+          required
+        /><br />
+        <label for="lname">Last Name</label>
+        <input
+          type="text"
+          id="lname"
+          placeholder="Enter Last Name"
+          required
+        /><br />
+        <label for="email">Email</label>
+        <input
+          type="text"
+          id="email"
+          placeholder="Enter Email"
+          required
+        /><br />
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          placeholder="Enter Password"
+          required
+        /><br />
+        <h2 id="show-thanks" style="display: none">
+          Thanks for submitting form
+        </h2>
+        <button type="button" id="submitbtn">Submit</button>
+      </form>
     </div>
+    <script src="JavaScript/script.js"></script>
   </body>
 </html>
