Js form validation

--- a/JavascriptForm/index.html
+++ b/JavascriptForm/index.html
@@ -38,7 +38,7 @@
         <h2 id="show-thanks" style="display: none">
           Thanks for submitting form
         </h2>
-        <button type="button" id="submitbtn">Submit</button>
+        <button type="submit" id="submitbtn">Submit</button>
       </form>
     </div>
     <script src="JavaScript/script.js"></script>
